# Sol_Sniper

./: .gitignore  CHANNEL_SETUP_GUIDE.md  Cargo.toml  DISCORD_DEBUG_GUIDE.md  DISCORD_TROUBLESHOOTING.md  FIX_TELEGRAM_ERROR.md  PROFIT_DB_README.md  TELEGRAM_BOT_README.md  TELEGRAM_SETUP_GUIDE.md  TROUBLESHOOTING.md  config.toml  config.toml.example  discord_diagnostic.py  discord_troubleshooting.md  dockerfile  get_user_id.py  get_user_id_simple.py  setup_channel.py  setup_discord.py  setup_telegram.py  test_discord_parsing.py  verify_config.py
.github/workflows/: ci.yml
keys/: id.json
scripts/: check_bot_instances.sh
src/: buy.rs  discord_listener.rs  grpc_listener.rs  lib.rs  main.rs  notifier.rs  profit_db.rs  sell.rs  strategy.rs  swap.rs  telegram_bot.rs
test/: get_user_id_interactive.py
