[package]
name = "snipe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { version = "1", features = ["full"] }
solana-client  = "=2.3.5"
solana-sdk     = "=2.3.0"
solana-program = "=2.3.0"
solana-account-decoder = "=2.3.5"
solana-transaction-status = "=2.3.5"
yellowstone-grpc-client = "=8.0.0"
yellowstone-grpc-proto  = "=8.0.0"
anyhow         = "1.0"
serde          = { version = "1.0", features = ["derive"] }
toml           = "0.8"
tracing        = "0.1"
tracing-subscriber = "0.3"
reqwest        = { version = "0.12", features = ["json"] }